--- a/src/App/AboutUs.scss
+++ b/src/App/AboutUs.scss
@@ -9,7 +9,9 @@
   -ms-overflow-style: none;
   /* Firefox 対応 */
   scrollbar-width: none;
-
+  
+  max-width: 900px;	
+  margin: 0 auto;
   &::-webkit-scrollbar
   {
     display: none;
