--- a/src/App/Shop.scss
+++ b/src/App/Shop.scss
@@ -22,6 +22,9 @@
     /* Firefox 対応 */
     scrollbar-width: none;
 
+    max-width: 900px;	
+    margin: 0 auto;
+    
     &::-webkit-scrollbar
     {
       display: none;
